Big code refactor in FskPortObject view

--- a/de.bund.bfr.knime.fsklab.nodes/resources/MessagesBundle.properties
+++ b/de.bund.bfr.knime.fsklab.nodes/resources/MessagesBundle.properties
@@ -519,6 +519,13 @@ GM.EditStudySamplePanel.samplingPointTooltip = <html> \
   <p>(Doc. ESTAT/F5/ES/155 "Data dictionary of activities of the \
   <p>establishments"). \
   </html>
+      
+ModelMath.SSE =  SSE
+ModelMath.MSE = MSE
+ModelMath.RMSE = RMSE
+ModelMath.R2 = r-Squared
+ModelMath.AIC = aic
+ModelMath.BIC = bic
 
 ## Predictive model
 ### GeneralInformationPanel messages
