Use full type names in EditReferencePanel

--- a/de.bund.bfr.knime.fsklab.nodes/resources/MessagesBundle.properties
+++ b/de.bund.bfr.knime.fsklab.nodes/resources/MessagesBundle.properties
@@ -384,7 +384,7 @@ GM.EditPopulationGroupPanel.regionTooltip = Spatial information (area) on which 
 GM.EditPopulationGroupPanel.countryLabel = Country
 GM.EditPopulationGroupPanel.countryTooltip = Country on which the model or data applies
 
-GM.EditPopulationGroupPanel.riskAndPopulationLabel = Risk and population
+GM.EditPopulationGroupPanel.riskAndPopulationLabel = Risk and population factors
 GM.EditPopulationGroupPanel.riskAndPopulationTooltip = <html> \
   <p>population risk factor that may influence the outcomes of the \
   <p>study, confounder should be included \
