[FSK Editor] Included entry for source in General information panel

--- a/de.bund.bfr.knime.fsklab.nodes/resources/MessagesBundle.properties
+++ b/de.bund.bfr.knime.fsklab.nodes/resources/MessagesBundle.properties
@@ -5,6 +5,9 @@
 GM.GeneralInformationPanel.studyNameLabel = Study name
 GM.GeneralInformationPanel.studyNameTooltip = Name given to the model or data
 
+GM.GeneralInformationPanel.sourceLabel = Source
+GM.GeneralInformationPanel.sourceTooltip = Related resource from which the resource is derived
+
 GM.GeneralInformationPanel.identifierLabel = Identifier
 GM.GeneralInformationPanel.identifierTooltip = Unambiguous ID given to the model or data
 
