Replace null checks with annotations in FskPortObject

--- a/de.bund.bfr.knime.fsklab.nodes/resources/MessagesBundle.properties
+++ b/de.bund.bfr.knime.fsklab.nodes/resources/MessagesBundle.properties
@@ -14,6 +14,9 @@ GM.GeneralInformationPanel.identifierTooltip = Unambiguous ID given to the model
 GM.GeneralInformationPanel.creationDateLabel = Creation date
 GM.GeneralInformationPanel.creationDateTooltip = Model creation date
 
+GM.GeneralInformationPanel.modificationDateLabel = Modification date
+GM.GeneralInformationPanel.modificationDateTooltip = Temporal information on the last modification of the model
+
 GM.GeneralInformationPanel.rightsLabel = Rights
 GM.GeneralInformationPanel.rightsTooltip = Rights held in over the resource
 
