Move Simulation labels to bundle file

--- a/de.bund.bfr.knime.fsklab.nodes/resources/MessagesBundle.properties
+++ b/de.bund.bfr.knime.fsklab.nodes/resources/MessagesBundle.properties
@@ -532,3 +532,8 @@ ModelMath.RMSE = RMSE
 ModelMath.R2 = r-Squared
 ModelMath.AIC = aic
 ModelMath.BIC = bic
+
+Simulation.Algorithm = Simulation algorithm
+Simulation.Model = Simulated model
+Simulation.Description = Simulation description
+Simulation.Script = Visualization script
