Fix labels of text areas in EditParameterPanel (editor node)

--- a/de.bund.bfr.knime.fsklab.nodes/resources/MessagesBundle.properties
+++ b/de.bund.bfr.knime.fsklab.nodes/resources/MessagesBundle.properties
@@ -315,20 +315,14 @@ GM.EditParameterPanel.referenceTooltip = <html> \
   <p>"Reference metadata" \
   </html>
 
-GM.EditParameterPanel.variabilitySubjectLabel = <html> \
-  <p>Parameter variability \
-  <p>subject \
-  </html>
+GM.EditParameterPanel.variabilitySubjectLabel = Parameter variability subject
 GM.EditParameterPanel.variabilitySubjectTooltip = <html> \
   <p>Information "per what" the variability is described. It can be \
   <p>variability between broiler in a flock, variability between all meat \
   <p>packages sold in Denmark, variability between days, etc. \
   </html>
 
-GM.EditParameterPanel.applicabilityLabel = <html> \
-  <p>Range of applicability \
-  <p>of the model \
-  </html>
+GM.EditParameterPanel.applicabilityLabel = Range of applicability of the model
 GM.EditParameterPanel.applicabilityTooltip = <html> \
   <p>Numerical values of the maximum and minimum limits of the parameter that \
   <p>determine the range of applicability for which the model applies \
