Fix text areas in EditParameterPanel

--- a/de.bund.bfr.knime.fsklab.nodes/resources/MessagesBundle.properties
+++ b/de.bund.bfr.knime.fsklab.nodes/resources/MessagesBundle.properties
@@ -270,7 +270,7 @@ GM.EditParameterPanel.classificationTooltip = General classification of the para
 GM.EditParameterPanel.parameterNameLabel = Parameter name
 GM.EditParameterPanel.parameterNameTooltip = A name given to the parameter
 
-GM.EditParameterPanel.descriptionLabel = Parameter classification
+GM.EditParameterPanel.descriptionLabel = Parameter description
 GM.EditParameterPanel.descriptionTooltip = General description of the parameter
 
 GM.EditParameterPanel.typeLabel = Parameter type
