new GUI for the runner node

--- a/de.bund.bfr.knime.fsklab.nodes/resources/MessagesBundle_de_DE.properties
+++ b/de.bund.bfr.knime.fsklab.nodes/resources/MessagesBundle_de_DE.properties
@@ -341,3 +341,14 @@ writer_tooltip = FSKX-Datei durchsuchen
 reader_button = Durchsuchen
 reader_label = Eingabedatei
 reader_tooltip = FSKX-Datei durchsuchen
+
+# Runner node strings
+runner_width_label = Breite
+runner_height_label = Höhe
+runner_res_label = Auflösung
+runner_textsize_label = Textgröße
+
+runner_width_tooltip = Breite des Plots
+runner_height_tooltip = Höhe des Plots
+runner_res_tooltip = Nominalauflösung in ppi
+runner_textsize_tooltip = Standardpunktgröße des geplotteten Textes
