--- a/de.bund.bfr.knime.fsklab.nodes/resources/MessagesBundle_es_ES.properties
+++ b/de.bund.bfr.knime.fsklab.nodes/resources/MessagesBundle_es_ES.properties
@@ -349,3 +349,14 @@ writer_tooltip = Examinar fichero FSKX
 reader_button = Examinar...
 reader_label = Fichero de entrada
 reader_tooltip = Examinar fichero FSKX
+
+# Runner node strings
+runner_width_label = Anchura
+runner_height_label = Altura
+runner_res_label = Resolución
+runner_textsize_label = Tamaño fuente
+
+runner_width_tooltip = Anchura del gráfico
+runner_height_tooltip = Altura del gráfico
+runner_res_tooltip = Resolución nominal en ppi
+runner_textsize_tooltip = Tamaño de punto predeterminado del texto dibujado
