Refactor text areas in Scope
EditProductPanel, EditHazardPanel and EditPopulationGroupPanel

--- a/de.bund.bfr.knime.fsklab.nodes/resources/MessagesBundle.properties
+++ b/de.bund.bfr.knime.fsklab.nodes/resources/MessagesBundle.properties
@@ -199,7 +199,7 @@ editor_EditPopulationGroupPanel_specialDietGroupsTooltip = <html> \
   <p>sub-population with special diets (vegetarians, diabetics, group \
   <p>following special ethnic diets) \
   </html>
-editor_EditPopulationGroupPanel_patternConsumptionLabel = Special diet groups
+editor_EditPopulationGroupPanel_patternConsumptionLabel = Pattern consumption
 editor_EditPopulationGroupPanel_patternConsumptionTooltip = <html> \
   <p>describe the consumption of different food items: frequency, portion \
   <p>size \
