--- a/de.bund.bfr.knime.fsklab.nodes/resources/MessagesBundle.properties
+++ b/de.bund.bfr.knime.fsklab.nodes/resources/MessagesBundle.properties
@@ -382,7 +382,7 @@ editor_StudyPanel_studyAssayTechnologyTypeLabel = Study Assay Technology Type
 editor_StudyPanel_studyAssayTechnologyTypeTooltip = The technology being employed to observe this measurement
 editor_StudyPanel_studyAssayTechnologyPlatformLabel = Study Assay Technology Platform
 editor_StudyPanel_studyAssayTechnologyPlatformTooltip = The technology platform used
-editor_StudyPanel_accreditationProcedureLabel = <html><p>Accreditation procedure for<p>the assay technology</html>
+editor_StudyPanel_accreditationProcedureLabel = Accreditation procedure for the assay techn.
 editor_StudyPanel_accreditationProcedureTooltip = The type of study design being employed
 editor_StudyPanel_protocolNameLabel = Study protocol name
 editor_StudyPanel_protocolNameTooltip = The name of the protocol, e.g. Extraction Protocol
