Fix buggy Spanish strings in editor > General information
"Source and status appear in English"

--- a/de.bund.bfr.knime.fsklab.nodes/resources/MessagesBundle_es_ES.properties
+++ b/de.bund.bfr.knime.fsklab.nodes/resources/MessagesBundle_es_ES.properties
@@ -274,7 +274,7 @@ editor_EditStudySamplePanel_samplingPointTooltip = Punto en la cadena alimentari
 ## GeneralInformationPanel
 editor_GeneralInformationPanel_studyNameLabel = Nombre del estudio
 editor_GeneralInformationPanel_studyNameTooltip = Nombre dado al modelo o datos
-editor_GeneralInformationPanel_sourceLabel = Source
+editor_GeneralInformationPanel_sourceLabel = Fuente
 editor_GeneralInformationPanel_sourceTooltip = Recurso conexo del cual se deriva el recurso
 editor_GeneralInformationPanel_identifierLabel = Identificador
 editor_GeneralInformationPanel_identifierTooltip = Identificador unívoco dado al modelo o datos
@@ -296,7 +296,7 @@ editor_GeneralInformationPanel_softwareLabel = Software
 editor_GeneralInformationPanel_softwareTooltip = Programa en el que se ha implementado el modelo
 editor_GeneralInformationPanel_languageWrittenInLabel = Idioma escrito en
 editor_GeneralInformationPanel_languageWrittenInTooltip = Idioma utilizado para escribir el modelo
-editor_GeneralInformationPanel_statusLabel = Status
+editor_GeneralInformationPanel_statusLabel = Estado
 editor_GeneralInformationPanel_statusTooltip = El estado de curación del modelo
 editor_GeneralInformationPanel_objectiveLabel = Objetivo
 editor_GeneralInformationPanel_objectiveTooltip = Objetivo del modelo o datos
