Fix buggy Spanish strings in editor > Data background

--- a/de.bund.bfr.knime.fsklab.nodes/resources/MessagesBundle_es_ES.properties
+++ b/de.bund.bfr.knime.fsklab.nodes/resources/MessagesBundle_es_ES.properties
@@ -321,6 +321,41 @@ editor_ScopePanel_regionTooltip = Información espacial (área) a la que se apli
 editor_ScopePanel_countryLabel = País
 editor_ScopePanel_countryTooltip = País en el que se aplica el modelo o los datos
 
+## StudyPanel messages
+editor_StudyPanel_studyIdentifierLabel = Identificador del studio
+editor_StudyPanel_studyIdentifierTooltip = Identificador definido por el usuario para el estudio
+editor_StudyPanel_studyTitleLabel = Título del estudio
+editor_StudyPanel_studyTitleTooltip = Título para el estudio
+editor_StudyPanel_studyDescriptionLabel = Descripción del estudio
+editor_StudyPanel_studyDescriptionTooltip = Breve description de los objectivos del estudio
+editor_StudyPanel_studyDesignTypeLabel = Tipo de diseño del estudio
+editor_StudyPanel_studyDesignTypeTooltip = El tipo de diseño del estudio siendo empleado
+editor_StudyPanel_studyAssayMeasurementsTypeLabel = Tipo de medidas del ensayo del estudio
+editor_StudyPanel_studyAssayMeasurementsTypeTooltip = Las medidas observadas en este ensayo
+editor_StudyPanel_studyAssayTechnologyTypeLabel = Tipo de technología del ensayo del estudio
+editor_StudyPanel_studyAssayTechnologyTypeTooltip = La technología empleada para observar esta medida
+editor_StudyPanel_studyAssayTechnologyPlatformLabel = Plataforma technológica para el ensayo del estudio
+editor_StudyPanel_studyAssayTechnologyPlatformTooltip = La plataforma technológica usada
+editor_StudyPanel_accreditationProcedureLabel = Procedimiento de acreditación para la technología del ensayo
+editor_StudyPanel_accreditationProcedureTooltip = Tipo de diseño del estudio empleado
+editor_StudyPanel_protocolNameLabel = Nombre del protocolo del estudio
+editor_StudyPanel_protocolNameTooltip = Nombre del protocolo, p. ej. Protocolo de extracción
+editor_StudyPanel_protocolTypeLabel = Tipo del protocolo del estudio
+editor_StudyPanel_protocolTypeTooltip = <html> \
+  <p>El tipo del protocol, preferiblemente procedente de una ontología, \
+  <p>p. ej. Protocolo de extracción \
+  </html>
+editor_StudyPanel_protocolDescriptionLabel = Protocolo del estudio
+editor_StudyPanel_protocolDescriptionTooltip = Descripción del protocolo
+editor_StudyPanel_protocolURILabel = URI del protocolo del estudio
+editor_StudyPanel_protocolURITooltip = URI para enlazar a una publicación, sitio web, etc. describiendo el protocolo
+editor_StudyPanel_protocolVersionLabel = Versión del protocolo del estudio
+editor_StudyPanel_protocolVersionTooltip = La versión del protocol usado, si aplicable
+editor_StudyPanel_parametersLabel = Nombre de los parámetros del protocolo del estudio
+editor_StudyPanel_parametersTooltip = Los parámetros usado al ejecutar este protocolo
+editor_StudyPanel_componentsTypeLabel = Componentes del protocolo del estudio
+editor_StudyPanel_componentsTypeTooltip = Los componentes usados para realizar este protocolo
+
 ## DataBackgroundPanel
 editor_DataBackgroundPanel_studySampleLabel = Muestra del estudio
 editor_DataBackgroundPanel_dietaryAssessmentMethodLabel = Método de evaluación dietética
