Fix buggy German strings in editor > Data background
English strings were used instead

--- a/de.bund.bfr.knime.fsklab.nodes/resources/MessagesBundle_de_DE.properties
+++ b/de.bund.bfr.knime.fsklab.nodes/resources/MessagesBundle_de_DE.properties
@@ -313,6 +313,41 @@ editor_ScopePanel_regionTooltip = Geodaten (Bereich), auf den das Modell oder di
 editor_ScopePanel_countryLabel = Land
 editor_ScopePanel_countryTooltip = Land, auf das das Modell oder die Daten zutreffen.
 
+## StudyPanel
+editor_StudyPanel_studyIdentifierLabel = Studienkennung
+editor_StudyPanel_studyIdentifierTooltip = Ein benutzerdefinierter Identifikator für die Studie
+editor_StudyPanel_studyTitleLabel = Studienbezeichnung
+editor_StudyPanel_studyTitleTooltip = Ein Titel für die Studie
+editor_StudyPanel_studyDescriptionLabel = Studienbeschreibung
+editor_StudyPanel_studyDescriptionTooltip = Kurzbeschreibung der Studienziele
+editor_StudyPanel_studyDesignTypeLabel = Studienentwurfstyp
+editor_StudyPanel_studyDesignTypeTooltip = Die Art des Studiendesigns, das verwendet wird.
+editor_StudyPanel_studyAssayMeasurementsTypeLabel = Study Assay Messungen Typ
+editor_StudyPanel_studyAssayMeasurementsTypeTooltip = Die Messungen, die in diesem Assay beobachtet werden.
+editor_StudyPanel_studyAssayTechnologieTypeLabel = Study Assay Technologie Typ
+editor_StudyPanel_studyAssayTechnologyTypeTooltip = Die Technologie, mit der diese Messung beobachtet wird.
+editor_StudyPanel_studyAssayTechnologyPlatformLabel = Study Assay Technologie-Plattform
+editor_StudyPanel_studyAssayTechnologyPlatformTooltip = Die verwendete Technologieplattform
+editor_StudyPanel_accreditationProcedureLabel = Akkreditierungsverfahren für den Assay techn.
+editor_StudyPanel_accreditationProcedureTooltip = Die Art des verwendeten Studiendesigns
+editor_StudyPanel_protocolNameLabel = Name des Studienprotokolls
+editor_StudyPanel_protocolNameTooltip = Der Name des Protokolls, z.B. Extraktionsprotokoll
+editor_StudyPanel_protocolTypeLabel = Studienprotokolltyp
+editor_StudyPanel_protocolTypeTooltip = <html> \
+  <p>Die Art des Protokolls, vorzugsweise von einer Ontologie kommend, z.B. \
+  <p>Extraktionsprotokoll \
+  </html>
+editor_StudyPanel_protocolDescriptionLabel = Studienprotokoll
+editor_StudyPanel_protocolDescriptionTooltip = Eine Beschreibung des Protokolls
+editor_StudyPanel_protocolURILabel = Studienprotokoll URI
+editor_StudyPanel_protocolURITooltip = Eine URI zum Verlinken auf eine Publikation, Webseite usw., die das Protokoll beschreibt.
+editor_StudyPanel_protocolVersionLabel = Studienprotokollversion
+editor_StudyPanel_protocolVersionTooltip = Die Version des verwendeten Protokolls, falls zutreffend.
+editor_StudyPanel_parametersLabel = Name der Parameter des Studienprotokolls
+editor_StudyPanel_parametersTooltip = Die Parameter, die bei der Ausführung dieses Protokolls verwendet werden.
+editor_StudyPanel_componentsTypeLabel = Studienprotokoll-Komponenten
+editor_StudyPanel_componentsTypeTooltip = Die Komponenten, die bei der Ausführung dieses Protokolls verwendet werden.
+
 ## DataBackgroundPanel
 editor_DataBackgroundPanel_studySampleLabel = Studienbeispiel
 editor_DataBackgroundPanel_dietaryAssessmentMethodLabel = Diätetische Bewertungsmethode
