Rename properties in editor node
* "Study protocol" -> "Study Protocol Description"
* "Study protocol components" -> "Study Protocol Components Name"

--- a/de.bund.bfr.knime.fsklab.nodes/resources/MessagesBundle.properties
+++ b/de.bund.bfr.knime.fsklab.nodes/resources/MessagesBundle.properties
@@ -391,7 +391,7 @@ editor_StudyPanel_protocolTypeTooltip = <html> \
   <p>The type of the protocol, preferably coming from an Ontology, e.g. \
   <p>Extraction Protocol \
   </html>
-editor_StudyPanel_protocolDescriptionLabel = Study protocol
+editor_StudyPanel_protocolDescriptionLabel = Study Protocol Description
 editor_StudyPanel_protocolDescriptionTooltip = A description of the protocol
 editor_StudyPanel_protocolURILabel = Study protocol URI
 editor_StudyPanel_protocolURITooltip = A URI to link out to a publication, web page, etc. describing the protocol
@@ -399,7 +399,7 @@ editor_StudyPanel_protocolVersionLabel = Study protocol version
 editor_StudyPanel_protocolVersionTooltip = The version of the protocol used, where applicable
 editor_StudyPanel_parametersLabel = Study protocol parameters name
 editor_StudyPanel_parametersTooltip = The parameters used when executing this protocol
-editor_StudyPanel_componentsTypeLabel = Study protocol components
+editor_StudyPanel_componentsTypeLabel = Study Protocol Components
 editor_StudyPanel_componentsTypeTooltip = The components used when carrying out this protocol
 
 ## Simulation
