Create RAKIP Laboratory class in DataBackground

--- a/de.bund.bfr.knime.fsklab.nodes/resources/MessagesBundle.properties
+++ b/de.bund.bfr.knime.fsklab.nodes/resources/MessagesBundle.properties
@@ -102,6 +102,14 @@ editor_EditHazardPanel_contaminationRangeTooltip = <html> \
   <p>variable "Hazard Unit" \
   </html>
   
+## EditLaboratoryPanel
+EditLaboratoryPanel_accreditationLabel = Laboratory accreditation
+EditLaboratoryPanel_accreditationTooltip = The laboratory accreditation to ISO/IEC 17025.
+EditLaboratoryPanel_nameLabel = Laboratory name
+EditLaboratoryPanel_nameTooltip = Laboratory code (National laboratory code if available) or Laboratory name
+EditLaboratoryPanel_countryLabel = Laboratory country
+EditLaboratoryPanel_countryTooltip = Country where the laboratory is placed. (ISO 3166-1-alpha-2).
+  
 ## EditModelEquationPanel
 editor_EditModelEquationPanel_nameLabel = Model equation name
 editor_EditModelEquationPanel_nameTooltip = A name given to the model equation
@@ -416,7 +424,7 @@ editor_EditCreatorPanel_contactLabel = Contact
 ## DataBackgroundPanel messages
 editor_DataBackgroundPanel_studySampleLabel = Study sample
 editor_DataBackgroundPanel_dietaryAssessmentMethodLabel = Dietary assessment method
-editor_DataBackgroundPanel_laboratoryAccreditationLabel = Laboratory accreditation
+editor_DataBackgroundPanel_laboratoryLabel = Laboratory
 editor_DataBackgroundPanel_assayLabel = Assay
 
 ModelMath.SSE =  SSE
