Update RAKIP Assay class

--- a/de.bund.bfr.knime.fsklab.nodes/resources/MessagesBundle.properties
+++ b/de.bund.bfr.knime.fsklab.nodes/resources/MessagesBundle.properties
@@ -7,6 +7,21 @@ editor_EditAssayPanel_nameLabel = Name
 editor_EditAssayPanel_nameTooltip = Name given to the assay
 editor_EditAssayPanel_descriptionLabel = Description
 editor_EditAssayPanel_descriptionTooltip = General description of the assay. Corresponds to the ISA REF protocol.
+editor_EditAssayPanel_moisturePercentageLabel = Moisture percentage
+editor_EditAssayPanel_moisturePercentageTooltip = Percentage of moisture in the original sample
+editor_EditAssayPanel_detectionLimitLabel = Limit of detection
+editor_EditAssayPanel_detectionLimitTooltip = Limit of detection reported in the unit specified by the variable "Hazard unit".
+editor_EditAssayPanel_quantificationLimitLabel = Limit of quantification
+editor_EditAssayPanel_quantificationLimitTooltip = Limit of quantification reported in the unit specified by the variable Hazard unit
+editor_EditAssayPanel_leftCensoredDataLabel = Left-censored data
+editor_EditAssayPanel_leftCensoredDataTooltip = percentage of measures equal to LOQ and/or LOD
+editor_EditAssayPanel_contaminationRangeLabel = Range of contamination
+editor_EditAssayPanel_contaminationRangeTooltip = Range of result of the analytical measure reported in the unit specified by the variable "Hazard Unit"
+editor_EditAssayPanel_uncertaintyLabel = Uncertainty value
+editor_EditAssayPanel_uncertaintyTooltip = <html> \
+  <p>Indicate the expanded uncertainty (usually 95% confidence interval) value associated \
+  <p>with the measurement expressed in the unit reported in the field "Hazard unit". \
+  </html>
 
 ## EditDietaryAssessmentMethodPanel
 editor_EditDietaryAssessmentMethodPanel_dataCollectionToolLabel = Methodological tool to collect data
@@ -85,23 +100,7 @@ editor_EditHazardPanel_labNameTooltip = <html> \
   </html>
 editor_EditHazardPanel_labCountryLabel = Laboratory country
 editor_EditHazardPanel_labCountryTooltip = Country where the laboratory is placed. (ISO 3166-1-alpha-2).
-editor_EditHazardPanel_detectionLimitLabel = Limit of detection
-editor_EditHazardPanel_detectionLimitTooltip = <html> \
-  <p>Limit of detection reported in the unit specified by the variable "Hazard unit". \
-  </html>
-editor_EditHazardPanel_quantificationLimitLabel = Limit of quantification
-editor_EditHazardPanel_quantificationLimitTooltip = <html> \
-  <p>Limit of quantification reported in teh unit specified by the variable Hazard \
-  <p>unit \
-  </html>
-editor_EditHazardPanel_leftCensoredDataLabel = Left-censored data
-editor_EditHazardPanel_leftCensoredDataTooltip = percentage of measures equal to LOQ and/or LOD
-editor_EditHazardPanel_contaminationRangeLabel = Range of contamination
-editor_EditHazardPanel_contaminationRangeTooltip = <html> \
-  <p>Range of result of the analytical measure reported in the unit specified by the \
-  <p>variable "Hazard Unit" \
-  </html>
-  
+
 ## EditLaboratoryPanel
 EditLaboratoryPanel_accreditationLabel = Laboratory accreditation
 EditLaboratoryPanel_accreditationTooltip = The laboratory accreditation to ISO/IEC 17025.
@@ -286,8 +285,6 @@ editor_EditReferencePanel_commentLabel = Comment
 ## EditStudySamplePanel
 editor_EditStudySamplePanel_sampleNameLabel = Sample name (ID)
 editor_EditStudySamplePanel_sampleNameTooltip = An unambiguous ID given to the samples used
-editor_EditStudySamplePanel_moisturePercentageLabel = Moisture percentage
-editor_EditStudySamplePanel_moisturePercentageTooltip = Percentage of moisture in the original sample
 editor_EditStudySamplePanel_fatPercentageLabel = Fat percentage
 editor_EditStudySamplePanel_fatPercentageTooltip = Percentage of fat in the original sample
 editor_EditStudySamplePanel_sampleProtocolLabel = Protocol of sample
