New EditAssayPanel strings for DE and ES

--- a/de.bund.bfr.knime.fsklab.nodes/resources/MessagesBundle_de_DE.properties
+++ b/de.bund.bfr.knime.fsklab.nodes/resources/MessagesBundle_de_DE.properties
@@ -5,6 +5,24 @@ editor_EditAssayPanel_nameLabel = Name
 editor_EditAssayPanel_nameTooltip = Name, der dem Assay gegeben wird.
 editor_EditAssayPanel_descriptionLabel = Beschreibung
 editor_EditAssayPanel_descriptionTooltip = Allgemeine Beschreibung des Assays. Entspricht dem ISA REF-Protokoll.
+editor_EditAssayPanel_moisturePercentageLabel = Feuchteprozentsatz
+editor_EditAssayPanel_moisturePercentageTooltip = Prozentsatz der Feuchtigkeit in der Originalprobe
+editor_EditAssayPanel_detectionLimitLabel = Grenze der Erkennung
+editor_EditAssayPanel_detectionLimitTooltip = Nachweisgrenze, die in der durch die Variable "Hazard unit" spezifizierten Einheit gemeldet wird.
+editor_EditAssayPanel_quantificationLimitLabel = Grenze der Quantifizierung
+editor_EditAssayPanel_quantificationLimitTooltip = Grenze der Quantifizierung, die in der durch die Variable Hazard unit spezifizierten Einheit gemeldet wird.
+editor_EditAssayPanel_leftCensoredDataLabel = Linkszensierte Daten
+editor_EditAssayPanel_leftCensoredDataTooltip = Prozentsatz der Maßnahmen gleich LOQ und/oder LOD
+editor_EditAssayPanel_contaminationRangeLabel = Bereich der Kontamination
+editor_EditAssayPanel_contaminationRangeTooltip = <html> \
+  <p>Bereich des Ergebnisses der analytischen Messgröße, der in der durch die Variable "Hazard Unit" \
+  <p>spezifizierten Einheit berichtet wird.
+  </html>
+editor_EditAssayPanel_uncertaintyLabel = Unsicherheitswert
+editor_EditAssayPanel_uncertaintyTooltip = <html> \
+  <p>Indizieren Sie die erweiterte Unsicherheit (normalerweise 95% Konfidenzintervall) Wert assoziiert \
+  <p>mit der Messung, die in der Einheit ausgedrückt wird, die im Feld "Gefahreneinheit" angegeben ist. \
+ </html>
 
 ## EditDietaryAssessmentMethodPanel
 editor_EditDietaryAssessmentMethodPanel_dataCollectionToolLabel = Methodisches Werkzeug zur Datenerhebung
@@ -81,17 +99,6 @@ editor_EditHazardPanel_labNameLabel = Laborname
 editor_EditHazardPanel_labNameTooltip = Laborcode (Nationaler Laborcode, falls vorhanden) oder Laborname
 editor_EditHazardPanel_labCountryLabel = Laborland
 editor_EditHazardPanel_labCountryTooltip = Land, in dem sich das Labor befindet. (ISO 3166-1-alpha-2).
-editor_EditHazardPanel_detectionLimitLabel = Grenze der Erkennung
-editor_EditHazardPanel_detectionLimitTooltip = Nachweisgrenze, die in der durch die Variable "Hazard unit" spezifizierten Einheit gemeldet wird.
-editor_EditHazardPanel_quantificationLimitLabel = Grenze der Quantifizierung
-editor_EditHazardPanel_quantificationLimitTooltip = Grenze der Quantifizierung, die in der durch die Variable Hazard unit spezifizierten Einheit gemeldet wird.
-editor_EditHazardPanel_leftCensoredDataLabel = Linkszensierte Daten
-editor_EditHazardPanel_leftCensoredDataTooltip = Prozentsatz der Maßnahmen gleich LOQ und/oder LOD
-editor_EditHazardPanel_contaminationRangeLabel = Bereich der Kontamination
-editor_EditHazardPanel_contaminationRangeTooltip = <html> \
-  <p>Bereich des Ergebnisses der analytischen Messgröße, der in der durch die Variable "Hazard Unit" \
-  <p>spezifizierten Einheit berichtet wird.
-  </html>
 
 ## EditModelEquationPanel  
 editor_EditModelEquationPanel_nameLabel = Modellgleichungsname
@@ -240,8 +247,7 @@ editor_EditReferencePanel_commentLabel = Kommentar
 ## EditStudySamplePanel
 editor_EditStudySamplePanel_sampleNameLabel = Probenname (ID)
 editor_EditStudySamplePanel_sampleNameTooltip = Eine eindeutige ID, die den verwendeten Samples zugewiesen wird.
-editor_EditStudySamplePanel_moisturePercentageLabel = Feuchteprozentsatz
-editor_EditStudySamplePanel_moisturePercentageTooltip = Prozentsatz der Feuchtigkeit in der Originalprobe
+
 editor_EditStudySamplePanel_fatPercentageLabel = Fettprozentsatz
 editor_EditStudySamplePanel_fatPercentageTooltip = Prozentsatz des Fettgehalts in der Originalprobe
 editor_EditStudySamplePanel_sampleProtocolLabel = Protokoll der Stichprobe
