--- a/de.bund.bfr.knime.fsklab.nodes/resources/MessagesBundle_es_ES.properties
+++ b/de.bund.bfr.knime.fsklab.nodes/resources/MessagesBundle_es_ES.properties
@@ -5,6 +5,29 @@ editor_EditAssayPanel_nameLabel = Nombre
 editor_EditAssayPanel_nameTooltip = Nombre dado al ensayo
 editor_EditAssayPanel_descriptionLabel = Descripción
 editor_EditAssayPanel_descriptionTooltip = Descripción general del ensayo. Corresponde al protocol REF de ISA.
+editor_EditAssayPanel_moisturePercentageLabel = Porcentaje de humedad
+editor_EditAssayPanel_moisturePercentageTooltip = Porcentaje de humedad en la muestra original
+editor_EditAssayPanel_detectionLimitLabel = Límite de detección
+editor_EditAssayPanel_detectionLimitTooltip = <html> \
+  <p>Limit of detection reported in the unit specified by the variable "Hazard unit". \
+  <p>Límite de detección indicado en la unidad especificada por la variable "Unidad de peligro".
+  </html>
+editor_EditAssayPanel_quantificationLimitLabel = Límite de quantificación
+editor_EditAssayPanel_quantificationLimitTooltip = <html> \
+  <p>Límite de cuantificación indicada en la unidad especificada por la variable "Unidad de peligro" \ 
+  </html>
+editor_EditAssayPanel_leftCensoredDataLabel = Datos censurados a la izquierda
+editor_EditAssayPanel_leftCensoredDataTooltip = Porcentaje de medidas igual a LOQ y/o LOD
+editor_EditAssayPanel_contaminationRangeLabel = Rango de contaminación
+editor_EditAssayPanel_contaminationRangeTooltip = <html> \
+  <p>Rango del resultado de la medida analítica indicada en la unidad especificada por la variable \
+  <p>"Unidad de Peligro" \
+  </html>
+editor_EditAssayPanel_uncertaintyLabel = Valor de incertidumbre
+editor_EditAssayPanel_uncertaintyTooltip = <html> \
+  <p> Indica el valor de incertidumbre expandida (usualmente intervalo de confianza del 95%) \
+  <p> asociado con la medida expresada en la unidad reportada en el campo "Unidad del peligro". \
+  </html>
 
 ## EditDietaryAssessmentMethodPanel
 editor_EditDietaryAssessmentMethodPanel_dataCollectionToolLabel = Herramienta metodológica para collecionar datos 
@@ -82,22 +105,13 @@ editor_EditHazardPanel_labNameTooltip = <html> \
   </html>
 editor_EditHazardPanel_labCountryLabel = País del laboratorio
 editor_EditHazardPanel_labCountryTooltip = País donde se halla el laboratorio. (ISO 3166-1-alpha-2).
-editor_EditHazardPanel_detectionLimitLabel = Límite de detección
-editor_EditHazardPanel_detectionLimitTooltip = <html> \
-  <p>Limit of detection reported in the unit specified by the variable "Hazard unit". \
-  <p>Límite de detección indicado en la unidad especificada por la variable "Unidad de peligro".
-  </html>
+
 editor_EditHazardPanel_quantificationLimitLabel = Límite de quantificación
 editor_EditHazardPanel_quantificationLimitTooltip = <html> \
   <p>Límite de cuantificación indicada en la unidad especificada por la variable "Unidad de peligro" \ 
   </html>
-editor_EditHazardPanel_leftCensoredDataLabel = Datos censurados a la izquierda
-editor_EditHazardPanel_leftCensoredDataTooltip = Porcentaje de medidas igual a LOQ y/o LOD
-editor_EditHazardPanel_contaminationRangeLabel = Rango de contaminación
-editor_EditHazardPanel_contaminationRangeTooltip = <html> \
-  <p>Rango del resultado de la medida analítica indicada en la unidad especificada por la variable \
-  <p>"Unidad de Peligro" \
-  </html>
+
+
   
 ## EditModelEquationPanel
 editor_EditModelEquationPanel_nameLabel = Nombre de la ecuación del modelo
@@ -248,8 +262,7 @@ editor_EditReferencePanel_commentLabel = Comentario
 ## EditStudySamplePanel
 editor_EditStudySamplePanel_sampleNameLabel = Nombre de la muestra (ID)
 editor_EditStudySamplePanel_sampleNameTooltip = Un ID unívoco dado a las muestras utilizadas
-editor_EditStudySamplePanel_moisturePercentageLabel = Porcentaje de humedad
-editor_EditStudySamplePanel_moisturePercentageTooltip = Porcentaje de humedad en la muestra original
+
 editor_EditStudySamplePanel_fatPercentageLabel = Porcentaje de grasa
 editor_EditStudySamplePanel_fatPercentageTooltip = Porcentaje de grasa en la muestra original
 editor_EditStudySamplePanel_sampleProtocolLabel = Protocolo de muestra
