Update RAKIP Parameter class

--- a/de.bund.bfr.knime.fsklab.nodes/resources/MessagesBundle.properties
+++ b/de.bund.bfr.knime.fsklab.nodes/resources/MessagesBundle.properties
@@ -124,7 +124,7 @@ editor_EditParameterPanel_classificationLabel = Parameter classification
 editor_EditParameterPanel_classificationTooltip = General classification of the parameter (e.g. Input, Constant, Output...)
 editor_EditParameterPanel_parameterNameLabel = Parameter name
 editor_EditParameterPanel_parameterNameTooltip = A name given to the parameter
-editor_EditParameterPanel_descriptionLabel = Parameter classification
+editor_EditParameterPanel_descriptionLabel = Parameter description
 editor_EditParameterPanel_descriptionTooltip = General description of the parameter
 editor_EditParameterPanel_typeLabel = Parameter type
 editor_EditParameterPanel_typeTooltip = The type of the parameter
