Move StudyPanel to dialog EditStudyPanel

--- a/de.bund.bfr.knime.fsklab.nodes/resources/MessagesBundle.properties
+++ b/de.bund.bfr.knime.fsklab.nodes/resources/MessagesBundle.properties
@@ -405,18 +405,13 @@ StudyPanel_parametersTooltip = The parameters used when executing this protocol
 StudyPanel_componentsTypeLabel = Study Protocol Components
 StudyPanel_componentsTypeTooltip = The components used when carrying out this protocol
 
-## Simulation
-editor_Simulation_Algorithm = Simulation algorithm
-editor_Simulation_Model = Simulated model
-editor_Simulation_Description = Simulation description
-editor_Simulation_Script = Visualization script
-
 ## EditCreatorPanel messages
 EditCreatorPanel_givenNameLabel = Given name
 EditCreatorPanel_familyNameLabel = Family name
 EditCreatorPanel_contactLabel = Contact
 
 ## DataBackgroundPanel messages
+DataBackgroundPanel_studyLabel = Study
 DataBackgroundPanel_studySampleLabel = Study sample
 DataBackgroundPanel_dietaryAssessmentMethodLabel = Dietary assessment method
 DataBackgroundPanel_laboratoryLabel = Laboratory
