Rename "Food description" to "Food descriptors" in DAM

--- a/de.bund.bfr.knime.fsklab.nodes/resources/MessagesBundle.properties
+++ b/de.bund.bfr.knime.fsklab.nodes/resources/MessagesBundle.properties
@@ -41,8 +41,8 @@ EditDietaryAssessmentMethodPanel_recordTypeTooltip = <html> \
   <p>consumption occasion, mean of consumption, quantified and described as \
   <p>eaten, recipes for self-made \
   </html>
-EditDietaryAssessmentMethodPanel_foodDescriptionLabel = Food description
-EditDietaryAssessmentMethodPanel_foodDescriptionTooltip = Use foodex2 facets
+EditDietaryAssessmentMethodPanel_foodDescriptorsLabel = Food descriptors
+EditDietaryAssessmentMethodPanel_foodDescriptorsTooltip = Use foodex2 facets
 
 ## EditHazardPanel
 EditHazardPanel_hazardTypeLabel = Hazard type
