Add fat percentage to Assay in model metadata and editor node

--- a/de.bund.bfr.knime.fsklab.nodes/resources/MessagesBundle.properties
+++ b/de.bund.bfr.knime.fsklab.nodes/resources/MessagesBundle.properties
@@ -9,6 +9,8 @@ EditAssayPanel_descriptionLabel = Description
 EditAssayPanel_descriptionTooltip = General description of the assay. Corresponds to the ISA REF protocol.
 EditAssayPanel_moisturePercentageLabel = Moisture percentage
 EditAssayPanel_moisturePercentageTooltip = Percentage of moisture in the original sample
+EditAssayPanel_fatPercentageLabel = Fat percentage
+EditAssayPanel_fatPercentageTooltip = Percentage of fat in the original sample
 EditAssayPanel_detectionLimitLabel = Limit of detection
 EditAssayPanel_detectionLimitTooltip = Limit of detection reported in the unit specified by the variable "Hazard unit".
 EditAssayPanel_quantificationLimitLabel = Limit of quantification
