Fix node translations.
Editor node is not translated and only supports English.

--- a/de.bund.bfr.knime.fsklab.nodes/resources/MessagesBundle_de_DE.properties
+++ b/de.bund.bfr.knime.fsklab.nodes/resources/MessagesBundle_de_DE.properties
@@ -354,7 +354,9 @@ StudyPanel_componentsTypeLabel = Studienprotokoll-Komponenten
 StudyPanel_componentsTypeTooltip = Die Komponenten, die bei der Ausführung dieses Protokolls verwendet werden.
 
 ## DataBackgroundPanel
+DataBackgroundPanel_studyLabel = Studie
 DataBackgroundPanel_studySampleLabel = Studienbeispiel
 DataBackgroundPanel_dietaryAssessmentMethodLabel = Diätetische Bewertungsmethode
 DataBackgroundPanel_laboratoryAkkreditierungAkkreditierungLabel = Laborakkreditierung
+DataBackgroundPanel_laboratoryLabel = Labor
 DataBackgroundPanel_assayLabel = Assay
