--- a/de.bund.bfr.knime.fsklab.nodes/resources/MessagesBundle_es_ES.properties
+++ b/de.bund.bfr.knime.fsklab.nodes/resources/MessagesBundle_es_ES.properties
@@ -368,7 +368,9 @@ StudyPanel_componentsTypeLabel = Componentes del protocolo del estudio
 StudyPanel_componentsTypeTooltip = Los componentes usados para realizar este protocolo
 
 ## DataBackgroundPanel
+DataBackgroundPanel_studyLabel = Studio
 DataBackgroundPanel_studySampleLabel = Muestra del estudio
 DataBackgroundPanel_dietaryAssessmentMethodLabel = Método de evaluación dietética
 DataBackgroundPanel_laboratoryAccreditationLabel = Acreditación de laboratorio
+DataBackgroundPanel_laboratoryLabel = Laboratorio
 DataBackgroundPanel_assayLabel = Ensayo
