--- a/de.bund.bfr.knime.fsklab.nodes/resources/RunnerNodeBundle_de_DE.properties
+++ b/de.bund.bfr.knime.fsklab.nodes/resources/RunnerNodeBundle_de_DE.properties
@@ -1,10 +1,16 @@
 # strings for the runner node
-width_label = Breite
-height_label = Höhe
-res_label = Auflösung
-textsize_label = Textgröße
 
+width_label = Breite
 width_tooltip = Breite des Plots
+
+height_label = Höhe
 height_tooltip = Höhe des Plots
+
+res_label = Auflösung
 res_tooltip = Nominalauflösung in ppi
+
+textsize_label = Textgröße
 textsize_tooltip = Standardpunktgröße des geplotteten Textes
+
+simulation_label = Simulation
+simulation_tooltip = Ausgewählte Simulation
