--- a/de.bund.bfr.knime.fsklab.nodes/resources/RunnerNodeBundle_es_ES.properties
+++ b/de.bund.bfr.knime.fsklab.nodes/resources/RunnerNodeBundle_es_ES.properties
@@ -1,10 +1,16 @@
 # strings for the runner node
-width_label = Anchura
-height_label = Altura
-res_label = Resolución
-textsize_label = Tamaño fuente
 
+width_label = Anchura
 width_tooltip = Anchura del gráfico
+
+height_label = Altura
 height_tooltip = Altura del gráfico
+
+res_label = Resolución
 res_tooltip = Resolución nominal en ppi
+
+textsize_label = Tamaño fuente
 textsize_tooltip = Tamaño de punto predeterminado del texto dibujado
+
+simulation_label = Simulación
+simulation_tooltip = Simulación seleccionada
